--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
   <title>RSVP</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <style>
-    body { margin:0; height:100vh; display:flex; background:#000; color:#0f0; font-family:monospace; position:relative; }
+    body { margin:0; height:100vh; display:flex; background:#000; color:#fff; font-family:monospace; position:relative; }
     #version { position:absolute; top:10px; left:10px; font-size:0.8rem; }
     #main { flex:1; display:grid; place-items:center; }
     #rsvp { font-size:6rem; text-align:left; max-width:90vw; word-break:break-all; user-select:none; cursor:default; caret-color:transparent; white-space:pre; }
     #wordCount { position:absolute; bottom:10px; left:10px; font-size:1rem; display:none; }
-    #settings { position:fixed; top:10px; right:20px; background:#000; color:#0f0; border:1px solid #0f0; padding:8px 12px; cursor:pointer; }
-    #controls { display:none; position:fixed; top:50px; right:20px; background:#000; padding:20px; border:1px solid #0f0; flex-direction:column; align-items:center; z-index:10; }
+    #settings { position:fixed; top:10px; right:20px; background:#000; color:#fff; border:1px solid #fff; padding:8px 12px; cursor:pointer; }
+    #controls { display:none; position:fixed; top:50px; right:20px; background:#000; padding:20px; border:1px solid #fff; flex-direction:column; align-items:center; z-index:10; }
     .row { display:flex; align-items:center; margin:10px 0; }
-    button { background:#000; color:#0f0; border:1px solid #0f0; padding:10px; cursor:pointer; margin:5px; }
-    input, select { background:#000; color:#0f0; border:1px solid #0f0; text-align:center; width:120px; margin:0 5px; }
+    button { background:#000; color:#fff; border:1px solid #fff; padding:10px; cursor:pointer; margin:5px; }
+    input, select { background:#000; color:#fff; border:1px solid #fff; text-align:center; width:120px; margin:0 5px; }
   </style>
 </head>
 <body>
-  <div id="version">v1.8 prefill url + jump to word</div>
+  <div id="version">v1.9 white default + color picker + % completion</div>
   <div id="main"><div id="rsvp"></div></div>
   <div id="wordCount"></div>
   <button id="settings">⚙️</button>
@@ -53,6 +53,15 @@
       </select>
     </div>
     <div class="row">
+      <span>Color:</span>
+      <select id="colorSelect" onchange="changeColor()">
+        <option value="#ffffff">White</option>
+        <option value="#00ff00">Green</option>
+        <option value="#ff0000">Red</option>
+        <option value="#ffff00">Yellow</option>
+      </select>
+    </div>
+    <div class="row">
       <input id="txtUrl" type="text" value="https://raw.githubusercontent.com/bramvandendool/speedreed/main/book.txt" placeholder="github raw url" style="width:220px;">
       <button onclick="loadText()">Load</button>
     </div>
@@ -69,9 +78,10 @@
     const display = document.getElementById('rsvp');
     const wordCountEl = document.getElementById('wordCount');
     let targetWpm = 400;
-    let rampUp = 2;
-    let fontSize = 3;
+    let rampUp = 5;
+    let fontSize = 6;
     let fontFamily = "monospace";
+    let textColor = "#ffffff";
     let timeoutId = null;
     let isPlaying = false;
     let startTime = null;
@@ -97,10 +107,22 @@
       display.style.fontFamily = fontFamily;
     }
 
-    document.getElementById('wpmInput').addEventListener('input', e => { targetWpm = parseInt(e.target.value) || 360; });
-    document.getElementById('rampInput').addEventListener('input', e => { rampUp = parseInt(e.target.value) || 2; });
+    function changeColor() {
+      textColor = document.getElementById('colorSelect').value;
+      display.style.color = textColor;
+      document.body.style.color = textColor;
+      document.querySelectorAll('button, input, select').forEach(el => {
+        el.style.color = textColor;
+        el.style.borderColor = textColor;
+      });
+      document.getElementById('settings').style.color = textColor;
+      document.getElementById('settings').style.borderColor = textColor;
+    }
+
+    document.getElementById('wpmInput').addEventListener('input', e => { targetWpm = parseInt(e.target.value) || 400; });
+    document.getElementById('rampInput').addEventListener('input', e => { rampUp = parseInt(e.target.value) || 5; });
     document.getElementById('fontInput').addEventListener('input', e => { 
-      fontSize = parseFloat(e.target.value) || 3; 
+      fontSize = parseFloat(e.target.value) || 6; 
       display.style.fontSize = `${fontSize}rem`; 
     });
 
@@ -149,13 +171,9 @@
       if (word.length <= 4) factor = 0.8;
       else if (word.length >= 15) factor = 1.2;
       else factor = 0.8 + (word.length - 4) / 11 * 0.4;
-
       let punctFactor = 1;
-      if (word === '\n\n') {
-        punctFactor = 0.5;
-      } else if (word.match(/[.,;:!?]/)) {
-        punctFactor = 0.25;
-      }
+      if (word === '\n\n') punctFactor = 0.5;
+      else if (word.match(/[.,;:!?]/)) punctFactor = 0.25;
       return baseInterval * factor + punctFactor;
     }
 
@@ -186,7 +204,8 @@
         wordCountEl.style.display = 'none';
       } else {
         clearTimeout(timeoutId);
-        wordCountEl.textContent = `Words: ${index} / ${words.length}`;
+        const percent = words.length > 0 ? Math.round((index / words.length) * 100) : 0;
+        wordCountEl.textContent = `Words: ${index} / ${words.length} (${percent}%)`;
         wordCountEl.style.display = 'block';
       }
     }
@@ -206,6 +225,9 @@
     document.getElementById('closeSettings').addEventListener('click', () => {
       document.getElementById('controls').style.display = 'none';
     });
+
+    // Initial color
+    changeColor();
   </script>
 </body>
 </html>
