--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     let targetWpm = 360;
     let rampUp = 1;
     let fontSize = 3;
-    let fontFamily = "monospace";
+    //let fontFamily = "monospace";
     let textColor = "#ffffff";
     let timeoutId = null;
     let isPlaying = false;
