--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <option value="Verdana, Geneva, sans-serif">Verdana</option>
         <option value="'Bookerly', Georgia, serif">Bookerly</option>
         <option value="Roboto, sans-serif">Roboto</option>
+        <option value="Roboto Condensed, sans-serif">RobotoNarrow</option>
       </select>
     </div>
     <div class="row">
